<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/klipa"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_NombreProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_NombreProducto"
        android:inputType="text"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/et_CodigoBarra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_CodigoBarra"
        android:inputType="text"
        android:textSize="24sp" />
    <!-- Juan Gallegos -->

    <EditText
        android:id="@+id/et_Precio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_Precio"
        android:inputType="numberDecimal"
        android:textSize="24sp" />
    <!-- Juan Gallegos -->

    <EditText
        android:id="@+id/et_Stock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_Stock"
        android:inputType="number"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/et_Descripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_Descripcion"
        android:inputType="textMultiLine"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAgregarProducto"
            android:layout_width="214dp"
            android:layout_height="wrap_content"
            android:background="#000EB2FB"
            android:text="Agregar"
            android:textColor="#08714E" />

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            android:text="@string/btnCancelar"
            android:textColor="#D80D0D" />
    </LinearLayout>
</LinearLayout>
